<resources>
    <string name="app_name" translatable="false">Yorick Messenger</string>
    <string name="app_bluetoothservice_unableToConnect">We are unable to connect to a remote bluetooth device</string>
    <string name="app_bluetoothservice_connectionLost">We have lost the connection</string>
    <!-- TODO: Remove or change this placeholder text -->

    <!-- New Users Support Activity strings -->

    <!-- ScanList Activity-->
    <string name="scanlist_searching_title">Searching...</string>
    <string name="scanlist_stopScanButton_title">Stop Scan</string>
    <string name="scanlist_paired_label">Paired Devices</string>
    <string name="scanlist_alertDialog_doYouWantToConnectTitle">Do you want to connect to: \n %1%s?</string>

    <string name="app_newUserSupport_title">Why Yorick Messenger?</string>
    <string name="app_newUserSupport_buttonNext">NEXT</string>
    <string name="app_newUserSupport_buttonGetStarted">GET STARTED</string>
    <string name="app_newUserSupport_buttonSkip">SKIP</string>
    <string name="app_newUserSupport_noWifiNeeded">NO Wi-Fi NEEDED</string>
    <string name="app_newUserSupport_noWifiNeededDescription">You do not need to have stable Wi-Fi connection. Just Bluetooth</string>
    <string name="app_newUserSupport_easyToUse">EASY TO USE</string>
    <string name="app_newUserSupport_easyToUseDescription">Just open an app and start talking with another people"</string>
    <string name="app_newUserSupport_privacy">PRIVACY</string>
    <string name="app_newUserSupport_privacyDescription">Do not worry about your privacy. There is no way to steel your conversations</string>

    <!-- Main Activity UI strings -->
    <string name="app_mainActivity_notConnected">NOT CONNECTED</string>
    <string name="app_mainActivity_connected">CONNECTED TO <b>%1$s</b></string>
    <string name="app_mainActivity_connecting">CONNECTING</string>
    <string name="app_mainActivity_editText_startTyping">Enter your text here…</string>
    <string name="app_mainActivity_appbar_open">Open</string>
    <string name="app_mainActivity_appbar_close">Close</string>

    <!-- Ready to scan fragment strings -->
    <string name="fragment_readyToScan_title">Lets find some new friends to speak with 😉</string>
    <string name="fragment_readyToScan_description">Tap this button or slide out the app menu</string>
    <string name="fragment_scanButton_label">SCAN DEVICES</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="app_navigation_action_scan">Scan Devices</string>
    <string name="app_navigation_action_home">Go Home</string>
    <string name="app_navigation_header_tglink" translatable="false">t.me/kerne1_pan1c</string>

    <string name="util_bluetoothDeviceNoName" translatable="false">noname</string>
    <string name="title_activity_appearance_settings">AppearanceSettingsActivity</string>

    <!-- Create\Check PIN fragment -->
    <string name="fragment_createPIN_createTitle">CREATE YOUR PIN CODE</string>
    <string name="fragment_createPIN_saveBtn">SAVE</string>
    <string name="fragment_checkPIN_checkTitle">ENTER YOUR PIN CODE"</string>
    <string name="fragment_checkPIN_proceedBtn">PROCEED</string>
    <string name="fragment_createPIN_doYouWantToCreate">Do you want to create PIN code?</string>
    <string name="fragment_createPIN_doYouWantToCreate_yesBtn">YES</string>
    <string name="fragment_createPIN_doYouWantToCreate_noBtn">NO</string>

    <!-- Create Profile fragment -->
    <string name="fragment_createProfile_createTitle">CREATE YOUR PROFILE</string>
    <string name="fragment_createProfile_saveBtn">SAVE</string>
    <string name="fragment_createProfile_fullName">Fullname</string>
    <string name="fragment_createProfile_hintText">Type here...</string>

    <!-- Preference Titles -->
    <string name="messages_header" translatable="false">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->

</resources>